# sccm-rc-viewer

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  env.ps1
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
crates/sccm-rc-core/: Cargo.toml
crates/sccm-rc-core/src/: lib.rs  rdp.rs
crates/sccm-rc-diag/: Cargo.toml
crates/sccm-rc-diag/src/: checks.rs  lib.rs  winutil.rs
crates/sccm-rc-orders/: Cargo.toml
crates/sccm-rc-orders/src/: bitmap.rs  cache.rs  canvas.rs  color.rs  cursor.rs  header.rs  lib.rs  primary.rs  processor.rs  rop.rs  secondary.rs
crates/sccm-rc-orders/tests/: orders.rs
crates/sccm-rc-protocol/: Cargo.toml
crates/sccm-rc-protocol/src/: arbitration.rs  cliprdr.rs  error.rs  framing.rs  handshake.rs  lib.rs  mppc.rs  mppc_vectors.rs  transport.rs
crates/sccm-rc-viewer/: Cargo.toml  build.rs
crates/sccm-rc-viewer/locales/: de.yml  en.yml  nl.yml
crates/sccm-rc-viewer/src/: audit.rs  gpu.rs  lib.rs  main.rs  recent.rs  record.rs  text.rs  toolbar.rs  wol.rs
docs/: PERFORMANCE.md  PROTOCOL.md  ROADMAP.md  SPEC.md
experiments/: capture-cmrcviewer.ps1  dll-probe.ps1  extract-guids.ps1  frida_capture.py  hook.c  inject.c  mppc_ref.c  screenshot.ps1
experiments/captures/: DECODE.md
