[package]
name = "sccm-rc-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "High-level SCCM RC session: connect, render-stream, input, lifecycle"

[[bin]]
name = "rdp-connect-test"
path = "src/bin/rdp-connect-test.rs"

[dependencies]
tokio.workspace = true
futures.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
bytes.workspace = true
clap.workspace = true
sccm-rc-protocol.workspace = true
ironrdp-connector = "0.8"
ironrdp-pdu = "0.7"
ironrdp-core = "0.1"
ironrdp-session = "0.8"
ironrdp-graphics = "0.7"
ironrdp-svc = "0.6"
image = { version = "0.25", default-features = false, features = ["png"] }
