[package]
name = "sccm-rc-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "SCCM Remote Control 2701-wire protocol: SSPI handshake, SecFilter framing, session arbitration"

[dependencies]
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
bytes.workspace = true
byteorder.workspace = true
socket2.workspace = true
clap.workspace = true
windows.workspace = true

[[bin]]
name = "handshake-test"
path = "src/bin/handshake-test.rs"

[[bin]]
name = "probe"
path = "src/bin/probe.rs"

[[bin]]
name = "pcap-extract"
path = "src/bin/pcap-extract.rs"

[[bin]]
name = "data-phase-test"
path = "src/bin/data-phase-test.rs"

[[bin]]
name = "rdp-explore"
path = "src/bin/rdp-explore.rs"
