[package]
name = "sccm-rc-viewer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "SCCM Remote Control viewer UI (winit + softbuffer)"

[[bin]]
name = "sccm-rc-viewer"
path = "src/main.rs"

[dependencies]
sccm-rc-core.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
clap.workspace = true
winit = "0.30"
softbuffer = "0.4"
